objects/EndpointsPerSandBox__mdt.object
<CustomObject>
    <description>This custom metadata contains all the endpoints for Sandboxes such as EOSDEV, EOSQA, EOSUAT
Won't store here production endpoints.</description>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Label__c</fullName>
        <description>Which record will be updated from the custommetadata</description>
        <label>Record Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanbox__c</fullName>
        <label>Sanbox</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>anySandbox</fullName>
                    <default>true</default>
                    <label>Any Sandbox</label>
                </value>
                <value>
                    <fullName>unison-eos--eosqa</fullName>
                </value>
                <value>
                    <fullName>unison-eos--eosdev</fullName>
                </value>
                <value>
                    <fullName>unison-eos--sfuat</fullName>
                </value>
                <value>
                    <fullName>setup</fullName>
                </value>
                <value>
                    <fullName>Custom Label</fullName>
                    <isActive>false</isActive>
                    <label>Custom Label</label>
                </value>
                <value>
                    <fullName>sandbox</fullName>
                    <isActive>false</isActive>
                    <label>sandbox</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Endpoints per SandBox</label>
    <pluralLabel>Endpoints per SandBox</pluralLabel>
</CustomObject>